# hostmcp

./: Cargo.toml  README.md
src/: main.rs  mcp.rs  protocol.rs  state.rs
src/tools/: bash.rs  edit.rs  glob_tool.rs  grep.rs  list.rs  mod.rs  read.rs
