[package]
name = "hostmcp"
version = "0.1.0"
edition = "2021"
description = "HTTP MCP server exposing filesystem/shell tools for an agent to operate a remote host: read, edit, glob, grep, list, bash"

[[bin]]
name = "hostmcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = "0.4"

[profile.release]
opt-level = 3
